syntax = "proto3";

package users;

option csharp_namespace = "Users.Kafka.Contracts";

import "google/protobuf/timestamp.proto";

message UserRegistrationKey {
  int64 user_id = 1;
}

enum Sex {
  SEX_UNSPECIFIED = 0;
  SEX_MALE = 1;
  SEX_FEMALE = 2;
}

message UserRegistrationValue {
  string firstName = 1;
  string lastName = 2;
  string email = 3;
  string password = 4;
  google.protobuf.Timestamp birthdate = 5;
  Sex sex = 6;
  string tel = 7;
  google.protobuf.Timestamp createdAt = 8;
}